# rsmodoro

./: Cargo.toml  README.md
src/: audio.rs  config.rs  main.rs
ui/: app.slint
