[package]
name = "rsmodoro"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = { version = "0.21", default-features = true }
chrono = "0.4"

[build-dependencies]
slint-build = "1.9"
